--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,7 @@
+body {
+  background-color: #006aff;
+}
+
 .documentation-page {
   padding: 3rem;
   max-width: 1400px;
@@ -5,15 +9,13 @@
 }
 
 .start-page {
-  * {
-    animation: fadeIn 1s ease-in-out;
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-      }
-      to {
-        opacity: 1;
-      }
+  animation: fadeIn 1s ease-in-out;
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
     }
   }
 
