--- a/src/index.scss
+++ b/src/index.scss
@@ -48,7 +48,7 @@ body {
 
     .header-content {
       max-width: 1000px;
-      padding: 2rem;
+      padding: 0 2rem;
       img {
         max-width: 150px;
       }
