--- a/src/index.scss
+++ b/src/index.scss
@@ -1,10 +1,12 @@
 .documentation-sidebar {
   width: 250px;
+  background: white;
   border-right: 1px solid #eee;
   height: 100vh;
   overflow-y: auto;
   position: fixed;
   padding-bottom: 1rem;
+  z-index: 5;
   .list {
     list-style-type: none;
     h4 {
